5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1593_2425.log
== TEST (2019-03-26 11:29:09) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel gasto)
print(round(calc,3))

-- ERROR:
File "XXXX", line 2
    combustivel gasto = float(input())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:29:22) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel_gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel gasto)
print(round(calc,3))

-- ERROR:
File "XXXX", line 3
    calc = (distancia / combustivel gasto)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:29:30) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel_gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel_gasto)
print(round(calc,3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:29:54) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel_gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel_gasto)
print(round(calc,3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:31:11) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel_gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel_gasto)
print(round(calc,3)+"km/l")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(calc,3)+"km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:31:45) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel_gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel_gasto)
print(round(calc,3)+("km/l"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(calc,3)+("km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:32:39) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel_gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel_gasto)
print(round(calc,3))+"km/l"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(calc,3))+"km/l"
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:33:11) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel_gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel_gasto)
print(round(calc,3))+("km/l")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(calc,3))+("km/l")
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:34:27) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel_gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel_gasto)
print(round(calc,3),"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:34:41) 
-- CODE:
distancia = float(input(" digite a distancia percorrida"))
combustivel_gasto = float(input("digite a quantidade de combustivel gasto"))
calc = (distancia / combustivel_gasto)
print(round(calc,3),"km/l")

-- EXECUTION TIME:
0.225327
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
